Configured back-end to show Index page.

--- a/KeyBoardChat.Web/Views/Shared/_Layout.cshtml
+++ b/KeyBoardChat.Web/Views/Shared/_Layout.cshtml
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KeyBoardChat</title>
+    <link rel="stylesheet" type="text/css" href="build/bundle.css" />
 </head>
 <body>
-<div>
-    @RenderBody();
-
-    @RenderSection("Scripts", required: false)
-</div>
+    <div id="app">
+        @RenderBody()
+    </div>
+    
+    <script src="build/bundle.js"></script>
 </body>
 </html>
