--- a/KeyBoardChat.FrontEnd/source/modules/app/App.scss
+++ b/KeyBoardChat.FrontEnd/source/modules/app/App.scss
@@ -1,4 +1,4 @@
-@import 'styles/globals.scss';
+@import 'styles/globals';
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet');
